@@ -104,11 +104,14 @@ class Orders extends Admin_Controller {
 		{
 			if(isset($product['is_gc']))
 			{
-				if($this->Gift_card_model->is_active($product['code']))
+				if(isset($product['is_gc']) && (bool)$product['is_gc'])
 				{
-					$data['order']->contents[$orderkey]['gc_status'] = '[ '.lang('giftcard_is_active').' ]';
-				} else {
-					$data['order']->contents[$orderkey]['gc_status'] = ' [ <a href="'. base_url() . $this->config->item('admin_folder').'/giftcards/activate/'. $product['code'].'">'.lang('activate').'</a> ]';
+					if($this->Gift_card_model->is_active($product['code']))
+					{
+						$data['order']->contents[$orderkey]['gc_status'] = '[ '.lang('giftcard_is_active').' ]';
+					} else {
+						$data['order']->contents[$orderkey]['gc_status'] = ' [ <a href="'. base_url() . $this->config->item('admin_folder').'/giftcards/activate/'. $product['code'].'">'.lang('activate').'</a> ]';
+					}
 				}
 			}
 		}
